Sapphire : Support Sealed chamber for other ROMs (#631)
* Fix move replacing on R/S

* Add flag check for new puzzle modes

* Init new puzzle mapping

* Support Sealed chamber for Sapphire JP

--- a/modules/data/symbols/patches/language/pokeemerald.yml
+++ b/modules/data/symbols/patches/language/pokeemerald.yml
@@ -784,6 +784,22 @@ Task_DoFieldMove_RunFunc:
   J: 0x8135670
   S: 0x8135234
 #---------------------#
+#    Puzzle Solver    #
+#---------------------#
+EventScript_UseDiveUnderwater:
+  D: ~
+  F: ~
+  I: ~
+  J: ~
+  S: ~
+Task_UseDive:
+  D: ~
+  F: ~
+  I: ~
+  J: ~
+  S: ~
+#---------------------#
+#---------------------#
 
 #----------------#
 #    Listeners   #
