--- a/modules/data/symbols/patches/language/pokeruby.yml
+++ b/modules/data/symbols/patches/language/pokeruby.yml
@@ -311,6 +311,15 @@ BattleBeginFirstTurn:
   J: 0x800ee0c
 #---------------------#
 
+#---------------------#
+#    Puzzle Solver    #
+#---------------------#
+S_UseDiveUnderwater:
+  J: ~
+Task_Dive:
+  J: ~
+#---------------------#
+
 #----------------#
 #    Listeners   #
 #----------------#
