--- a/modules/data/symbols/patches/language/pokeruby_rev1.yml
+++ b/modules/data/symbols/patches/language/pokeruby_rev1.yml
@@ -401,6 +401,19 @@ BattleBeginFirstTurn:
   S: 0x8011ccc
 #---------------------#
 
+#---------------------#
+#    Puzzle Solver    #
+#---------------------#
+S_UseDiveUnderwater:
+  F: ~
+  I: ~
+  S: ~
+Task_Dive:
+  F: ~
+  I: ~
+  S: ~
+#---------------------#
+
 #----------------#
 #    Listeners   #
 #----------------#
