--- a/modules/data/symbols/patches/language/pokesapphire_rev1.yml
+++ b/modules/data/symbols/patches/language/pokesapphire_rev1.yml
@@ -405,6 +405,19 @@ BattleBeginFirstTurn:
   S: 0x8011ccc
 #---------------------#
 
+#---------------------#
+#    Puzzle Solver    #
+#---------------------#
+S_UseDiveUnderwater:
+  F: 0x81b77b4
+  I: 0x81b24f4
+  S: 0x81b4b05
+Task_Dive:
+  F: 0x8087628
+  I: 0x80874e0
+  S: 0x80875c8
+#---------------------#
+
 #----------------#
 #    Listeners   #
 #----------------#
